# portfolio

./: .gitignore  .pre-commit-config.yaml  README.md  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
dsplib/: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  pyproject.toml
dsplib/bench/: dsplibBench.cpp
dsplib/dsplib/: __init__.py
dsplib/include/dsplib/: dsplib.hpp  dsplibTest.cpp
dsplib/include/dsplib/tf/: Dimension.hpp  TransferFunction.hpp
dsplib/nanobind/: CMakeLists.txt  dsplib_ext.cpp
dsplib/tests/: test_dsplib.py
liuran/: .prettierignore  CLAUDE.md  README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  project.json  tsconfig.json  vite.config.ts
liuran/e2e/: smoke.e2e.ts  tsconfig.json
liuran/src/: app.d.ts  app.html
liuran/src/lib/: sanitize.spec.ts  sanitize.ts
liuran/src/lib/assets/: essays.yml  publications.yml
liuran/src/lib/assets/essays/: collectivism.md  kant.md  langyabang.md  lear.md  ssy.md
liuran/src/lib/components/: EssaysTable.svelte  EssaysTable.svelte.spec.ts  Footer.svelte  Navigation.svelte  Publications.svelte  Publications.svelte.spec.ts  PushFold.svelte  SocialLinks.svelte  SocialLinks.svelte.spec.ts  StrategyGrid.svelte  Threeway.svelte
liuran/src/lib/components/icons/: GitHub.svelte  GoogleScholar.svelte  LinkedIn.svelte
liuran/src/lib/config/: navigation.ts
liuran/src/lib/pkg/: pushfold.d.ts  pushfold.js  pushfold_bg.js  pushfold_bg.wasm  pushfold_bg.wasm.d.ts
liuran/src/lib/pkg/headsup/: pushfold_headsup.d.ts  pushfold_headsup.js  pushfold_headsup_bg.js  pushfold_headsup_bg.wasm  pushfold_headsup_bg.wasm.d.ts
liuran/src/lib/pkg/threeway/: pushfold_threeway.d.ts  pushfold_threeway.js  pushfold_threeway_bg.js  pushfold_threeway_bg.wasm.d.ts
liuran/src/lib/pushfold/: format.spec.ts  format.ts  frequencies.spec.ts  frequencies.ts  solvers.spec.ts
liuran/src/lib/pushfold/headsup/: frequencies.ts
liuran/src/lib/styles/: base.css  headsup.css  pushfold.css  threeway.css  tokens.css
liuran/src/lib/workers/: threeway.worker.ts
liuran/src/routes/: +layout.svelte  +layout.ts  +page.svelte
liuran/src/routes/essays/: +page.svelte  +page.ts
liuran/src/routes/essays/[id]/: +page.svelte  +page.ts
liuran/src/routes/publications/: +page.svelte  +page.ts
liuran/src/routes/software/: +page.svelte
liuran/src/routes/software/pushfold/: +page.svelte
liuran/src/routes/software/threeway/: +page.svelte
liuran/static/: CNAME
liuran/static/essays/: collectivism.md  kant.md  langyabang.md  lear.md  ssy.md
lookups/: .clang-format  CMakeLists.txt  README.md  project.json
lookups/bench/: GenerateBench.cpp
lookups/include/pushfold/: Binomial.hpp  BinomialTest.cpp  Colex.hpp  Combinator.hpp  CombinatorTest.cpp  Constants.hpp  Deck.hpp  DeckTest.cpp  Equity.hpp  EquityTest.cpp  Infosets.hpp  InfosetsTest.cpp  Matchups.hpp  MatchupsTest.cpp
lookups/include/pushfold/Frontends/: CppFrontend.hpp  CppFrontendTest.cpp  RustFrontend.hpp  RustFrontendTest.cpp  TypeScriptFrontend.hpp  TypeScriptFrontendTest.cpp
lookups/include/pushfold/Headsup/: Constants.hpp  Equity.hpp  EquityTest.cpp  Matchups.hpp  MatchupsTest.cpp
lookups/include/pushfold/Threeway/: Colex.hpp  ColexTest.cpp  Constants.hpp  Equity.hpp  EquityTest.cpp  Matchups.hpp  MatchupsTest.cpp  Multiset.hpp  MultisetTest.cpp
lookups/include/pushfold/headsup/: Equity.hpp  EquityTest.cpp  Matchups.hpp  MatchupsTest.cpp
lookups/src/: generate.cpp
lookups/src/Headsup/: generate.cpp
lookups/src/Threeway/: generate.cpp
lookups/src/headsup/: generate.cpp
pushfold/: Cargo.toml  README.md  project.json
pushfold/benches/: solve_push_fold.rs  solver.rs
pushfold/headsup/: Cargo.toml
pushfold/headsup/benches/: solver.rs
pushfold/headsup/src/: constants.rs  lib.rs  solver.rs
pushfold/shared/: Cargo.toml
pushfold/shared/src/: constants.rs  display.rs  error.rs  lib.rs
pushfold/src/: bindings.rs  constants.rs  lib.rs  pushfold.rs  util.rs
pushfold/threeway/: Cargo.toml
pushfold/threeway/benches/: solver.rs
pushfold/threeway/src/: constants.rs  lib.rs  solver.rs
scripts/: build-headsup.sh  build-pushfold.sh  build-threeway.sh
