[workspace]
resolver = "3"
members = ["shared", "headsup", "threeway"]

# Profiles apply workspace-wide and are only honored in the root manifest.
[profile.release]
lto = true
strip = true

# The three-way solver's tests contract 169^3 tensors every CFR iteration,
# which is unusably slow without optimization, so test builds keep it on.
[profile.test]
opt-level = 3
