[workspace]
resolver = "3"
members = ["shared", "headsup", "threeway"]

# Single source of truth for versions shared across crates; member manifests
# pull these in with `{ workspace = true }` instead of repeating version
# numbers, so bumping e.g. wasm-bindgen only happens in one place.
[workspace.dependencies]
pushfold-shared = { path = "shared" }
wasm-bindgen = "0.2.125"
js-sys = "0.3"
nalgebra = "0.35.0"
ndarray = "0.16.1"
criterion = "0.8.2"

# Profiles apply workspace-wide and are only honored in the root manifest.
[profile.release]
lto = true
strip = true
# Force a single codegen unit so the emitted wasm is byte-reproducible across
# host platforms. With the default (16), rustc partitions monomorphizations
# into codegen units whose ordering isn't stable between a macOS dev machine
# and CI's Linux runner; that reshuffles the function/elem/code sections and
# breaks the committed-artifact check even though the toolchain is identical.
# The three-way solver (many generic instantiations over the generated tables)
# is what exposed it. One CGU removes the partitioning variable entirely.
codegen-units = 1

# The three-way solver's tests contract 169^3 tensors every CFR iteration,
# which is unusably slow without optimization, so test builds keep it on.
[profile.test]
opt-level = 3
