[package]
name = "pushfold-headsup"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pushfold-shared = { path = "../shared" }
nalgebra = "0.35.0"
wasm-bindgen = "0.2.125"

[dev-dependencies]
# Tests and benches pretty-print strategies over the hand grid, so they pull in
# the `hands` reference data. Dev-dependency features don't reach the release
# (WASM) build, so the grid stays out of the shipped solver.
pushfold-shared = { path = "../shared", features = ["hands"] }
criterion = "0.8.2"

[[bench]]
name = "solver"
harness = false
