[package]
name = "pushfold-threeway"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pushfold-shared = { path = "../shared" }
ndarray = "0.16.1"
wasm-bindgen = "0.2.125"
js-sys = "0.3"

[dev-dependencies]
# Tests pretty-print strategies over the hand grid, so they pull in the `hands`
# reference data. Dev-dependency features don't reach the release (WASM) build,
# so the grid stays out of the shipped solver.
pushfold-shared = { path = "../shared", features = ["hands"] }
