[package]
name = "pushfold-threeway"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pushfold-shared = { workspace = true }
ndarray = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }

[dev-dependencies]
# Tests pretty-print strategies over the hand grid, so they pull in the `hands`
# reference data. Dev-dependency features don't reach the release (WASM) build,
# so the grid stays out of the shipped solver.
pushfold-shared = { workspace = true, features = ["hands"] }
criterion = { workspace = true }

[[bench]]
name = "solver"
harness = false
